fix to make the icon visible

--- a/less/framework/base/forms.less
+++ b/less/framework/base/forms.less
@@ -617,6 +617,7 @@ select:focus:required:invalid {
 }
 .input-append,
 .input-prepend {
+	font-size: 1em;
 	.add-on {
 		height: 18px;
 	}
